--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,115 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@keyframes flicker {
+  0% {
+    opacity: 0.36108;
+  }
+  5% {
+    opacity: 0.7003;
+  }
+  10% {
+    opacity: 0.7003;
+  }
+  15% {
+    opacity: 0.90626;
+  }
+  20% {
+    opacity: 0.7003;
+  }
+  25% {
+    opacity: 0.83891;
+  }
+  30% {
+    opacity: 0.7003;
+  }
+  35% {
+    opacity: 0.67807;
+  }
+  40% {
+    opacity: 0.36108;
+  }
+  45% {
+    opacity: 0.84693;
+  }
+  50% {
+    opacity: 0.96019;
+  }
+  55% {
+    opacity: 0.7003;
+  }
+  60% {
+    opacity: 0.7003;
+  }
+  65% {
+    opacity: 0.71988;
+  }
+  70% {
+    opacity: 0.53455;
+  }
+  75% {
+    opacity: 0.7003;
+  }
+  80% {
+    opacity: 0.71428;
+  }
+  85% {
+    opacity: 0.70419;
+  }
+  90% {
+    opacity: 0.7003;
+  }
+  95% {
+    opacity: 0.7003;
+  }
+  100% {
+    opacity: 0.7003;
+  }
+}
+
+body::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(18, 16, 16, 0.1);
+  opacity: 0;
+  z-index: 2;
+  pointer-events: none;
+  animation: flicker 0.1s infinite;
+}
+body::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+    linear-gradient(
+      90deg,
+      rgba(255, 0, 0, 0.06),
+      rgba(0, 255, 0, 0.02),
+      rgba(0, 0, 255, 0.06)
+    );
+  z-index: 2;
+  background-size: 100% 2px, 3px 100%;
+  pointer-events: none;
+}
+
 body {
-  padding: 0;
+  background-color: #008080;
+  overflow: hidden;
+  font-family: Custom;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: "Custom";
+  src: url(/fonts/W95FA.otf);
 }
